--- a/src/assets/styles/_global.scss
+++ b/src/assets/styles/_global.scss
@@ -2,13 +2,13 @@
 
 //Farger
 $PalePink: #D9B4D3;
-$Magenta: #A76FBF;
+$Magenta: #c381e0;
 $DarkMagenta: #7c4992;
-$PaleYellow: #f3f0e8;
 $Burgundy: #65314a;
 $DarkBurgundy: #331624;
-$Yellow: #F2E7C4;
-$Orange: #ba823c;
+$PaleYellow: #f3f0e8;
+$Yellow: #eed686;
+$Orange: #95560a;
 $White: #ffffff;
 $Black: #000000;
 
