--- a/src/assets/styles/Header.scss
+++ b/src/assets/styles/Header.scss
@@ -36,5 +36,24 @@ header {
     .linkButton{
         background-color: global.$PalePink;
         color: global.$Burgundy;
+        border-radius: 40px;
+    }
+}
+
+@media only screen and (max-width: 808px){
+    .headerSection{
+        flex-direction: column;
+
+    }
+    header{
+        ul{
+            text-align: center;
+            flex-direction: column;
+            gap: 1rem;
+        }
+
+        .logo {
+            margin-bottom: 1rem;
+        }
     }
 }
