--- a/src/assets/styles/categoryPage.scss
+++ b/src/assets/styles/categoryPage.scss
@@ -36,3 +36,23 @@
         background-color: rgba(0, 0, 0, 0.4);
     }
 }
+
+.categorySection {
+    @include global.content-width();
+    @include global.flex-display(row, wrap, center, stretch, 1.6rem);
+    padding-top: global.$pad-top;
+    padding-bottom: global.$pad-bottom;
+
+    border-bottom: 1px solid #e4e4e4;
+
+    h2 {
+        width: 100%;
+        font-size: 2rem;
+    }
+     
+    > a, > article {
+        flex: 1 1;
+        max-width: 450px;
+        min-width: 350px;  
+    }
+}
