Toggle ønskeliste ikoner, filtrere objekter i API, fjernet link rundt eventCard
Filtrert vekk unødvendige objekter i API. Fjernet link rundt eventCard. Eventer lagret i ønskeliste indikeres med solid farget hjerteikon.

--- a/src/assets/styles/eventCard.scss
+++ b/src/assets/styles/eventCard.scss
@@ -59,6 +59,8 @@
         padding: 0.6rem 1.2rem;
         border-radius: 30px;
         font-weight: 600;
+        text-decoration: none;
+        color: global.$DarkBurgundy;
     }
 }
 
