--- a/src/assets/styles/cityEventCard.scss
+++ b/src/assets/styles/cityEventCard.scss
@@ -1,11 +1,17 @@
 @use "global";
 
+.city-holder{
+    display:flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+}
+
 .tenCitys{
     display: flex; 
     flex-direction: column;
     article{
-        max-width: 300px;
-        max-height: 400px;
+        width: 300px;
+        height: 350px;
         background-color: global.$PalePink;
         padding: 1rem;
         margin: 1rem;
