EventPage styling, ikoner for sosiale medier, EventHeader komponent

--- a/src/assets/styles/_global.scss
+++ b/src/assets/styles/_global.scss
@@ -15,6 +15,7 @@ $Black: #000000;
 //Font
 $Exo2: "Exo 2", sans-serif;
 $Bold: 700;
+$SemiBold: 600;
 $Regular: 400;
 $Light: 300;
 $text-m: 1.2rem;
