--- a/src/assets/styles/Layout.scss
+++ b/src/assets/styles/Layout.scss
@@ -9,6 +9,28 @@ h1{
   margin: 0 auto;
 }
 
+.categorySection, .eventGrid {
+    @include global.content-width();
+    @include global.flex-display(row, wrap, center, stretch, 1.6rem);
+    padding-top: global.$pad-top;
+    padding-bottom: global.$pad-bottom;
+
+    border-bottom: 1px solid #e4e4e4;
+
+    h2 {
+        width: 100%;
+        font-size: 2rem;
+    }
+     
+    > a, > article {
+        flex: 1 1;
+        max-width: 450px;
+        min-width: 350px;  
+    }
+}
+
+
+
 /*section{
     display: flex;
   flex-wrap: wrap;
