fjerne første element i map av artister og mindre styling på ArtistCard

--- a/src/assets/styles/eventPage.scss
+++ b/src/assets/styles/eventPage.scss
@@ -40,7 +40,10 @@
 
 .artistCard {
     img {
+        height: 100%;
         width: 100%;
         object-fit: cover;
+        border-radius: 8px;
+        max-height: 250px;
     }
 }
