Satt opp venneliste og begynt på styling

--- a/src/assets/styles/_global.scss
+++ b/src/assets/styles/_global.scss
@@ -37,6 +37,7 @@ $pad-bottom: 3rem;
 }
 
 @mixin content-width ($left: $pad-left, $right: $pad-right, $max-width: $page-width) {
+    margin: 0 auto;
     padding-left: $left;
     padding-right: $right;
     max-width: $max-width;
