--- a/src/assets/styles/_global.scss
+++ b/src/assets/styles/_global.scss
@@ -6,7 +6,7 @@ $Magenta: #c381e0;
 $DarkMagenta: #7c4992;
 $Burgundy: #65314a;
 $DarkBurgundy: #331624;
-$PaleYellow: #f3f0e8;
+$PaleYellow: #ffedc1;
 $Yellow: #eed686;
 $Orange: #95560a;
 $White: #ffffff;
