--- a/src/assets/styles/Layout.scss
+++ b/src/assets/styles/Layout.scss
@@ -29,7 +29,23 @@ h1{
     }
 }
 
+footer{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    flex-wrap: wrap;
+    min-height: 3rem;
+    background-color: global.$DarkMagenta;
 
+    a{
+        padding: 1rem;
+        color: global.$Yellow;
+        text-decoration: none;
+    }
+    a:hover{
+        color: global.$PaleYellow
+    }
+}
 
 /*section{
     display: flex;
