--- a/src/assets/styles/sanityEventDetails.scss
+++ b/src/assets/styles/sanityEventDetails.scss
@@ -8,6 +8,9 @@
     //justify-content: space-around;
     img{
         min-width: 100%;
+        max-height: 35rem;
+        object-fit: cover;
+        object-position: 100% 20%;
     }
     h1{
         padding: 3rem 2rem 0;
