--- a/src/assets/styles/sanityEventDetails.scss
+++ b/src/assets/styles/sanityEventDetails.scss
@@ -4,7 +4,6 @@
     //background-color: red;
     display: flex;
     flex-wrap: wrap;
-    flex-direction: column;
     //justify-content: space-around;
     img{
         min-width: 100%;
@@ -12,10 +11,16 @@
         object-fit: cover;
         object-position: 100% 20%;
     }
-    h1{
+    h1, h2{
         padding: 3rem 2rem 0;
+        min-width: 100%;
     }
-    
+    .artistCard{
+        max-width: 15rem;
+        min-width: 15rem;
+        max-height: 15rem;
+        padding-bottom: 3rem;
+    }
 }
 .sanityEventInfo{
     padding: 2rem 2rem;
@@ -30,6 +35,16 @@
 }
 
 .sanityWishlist{
-    min-width: 100%;
-    padding: 0 2rem 2rem;
+    margin: 0 auto;
+    padding-left: 2rem;
+    padding-right: 2rem;
+    max-width: 1380px;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: flex-start;
+    align-items: stretch;
+    gap: 1.6rem;
+    padding-top: 3rem;
+    padding-bottom: 3rem;
 }
