Småpirk på artistCard og sanityEventDetails sass

--- a/src/assets/styles/sanityEventDetails.scss
+++ b/src/assets/styles/sanityEventDetails.scss
@@ -30,8 +30,9 @@
     font-weight: global.$SemiBold;
 }
 .sanityGenre{
-    background-color: global.$Magenta;
+    background-color: global.$Yellow;
     padding: 0.5rem 1rem;
+    border-radius: 8px;
 }
 
 .sanityWishlist{
