border style solid

--- a/src/assets/styles/filter.scss
+++ b/src/assets/styles/filter.scss
@@ -23,6 +23,7 @@
         border-color: #afafaf;
         border-radius: 3px;
         outline: none;
+        border-style: solid;
     }
 
     input[type="date"] {
