Logg inn sass + header og footer

--- a/src/assets/styles/Header.scss
+++ b/src/assets/styles/Header.scss
@@ -93,6 +93,7 @@ header {
         }
         button:hover{
             text-decoration: underline;
+            cursor: pointer;
         }
     }
     
