--- a/src/assets/styles/Layout.scss
+++ b/src/assets/styles/Layout.scss
@@ -20,7 +20,6 @@ h1{
     h2 {
         width: 100%;
         font-size: 2rem;
-        padding-left: 2rem;
     }
      
     > a, > article {
@@ -36,9 +35,13 @@ h1{
     }
 }
 
+main{
+    min-height: 100vh;
+}
+
 footer{
     display: flex;
-    justify-content: space-between;
+    justify-content: space-evenly;
     align-items: center;
     flex-wrap: wrap;
     min-height: 3rem;
