--- a/src/assets/styles/eventCard.scss
+++ b/src/assets/styles/eventCard.scss
@@ -83,6 +83,7 @@
     list-style: none;
     flex-wrap: wrap;
     width: 100%;
+    
 
         .cityBtn{
         background-color: global.$Yellow;
@@ -92,7 +93,8 @@
         font-weight: 600;
         text-decoration: none;
         color: global.$DarkBurgundy;
-        margin: 0.5rem;
+        margin: 0.5rem;    
+        cursor: pointer;
     }
 
 }
